@@ -5,6 +5,7 @@ import map.project.musiclibrary.data.model.users.NormalUser;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
@@ -14,6 +15,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @ExtendWith(SpringExtension.class)
 @DataJpaTest
+@AutoConfigureTestDatabase(replace = AutoConfigureTestDatabase.Replace.NONE)
 public class NormalUserRepoTest {
 
     @Autowired
@@ -28,6 +30,6 @@ public class NormalUserRepoTest {
         List<NormalUser> foundUsers = normalUserRepository.findByName("John Doe");
 
         assertEquals(1, foundUsers.size());
-        assertEquals("John Doe", foundUsers.get(0).getName());
+        assertEquals("John Doe", foundUsers.getFirst().getName());
     }
 }
